allow same letters multiple times

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
     <%= javascript_importmap_tags %>
   </head>
 
-  <body class="flex justify-center">
+  <body class="flex justify-center p-12">
     <%= yield %>
   </body>
 </html>
